test_scores/negative_dimers/features/P78406.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P78406.pkl.xz